--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,23 @@ language: erlang
 notifications:
   recipients:
     - carlos@carloslage.net
+env:
+  - ELIXIR="v0.14.1"
+  - ELIXIR="v0.14.2"
+  - ELIXIR="v0.14.3"
+  - ELIXIR="v0.15.0"
+  - ELIXIR="v0.15.1"
+  - ELIXIR="v1.0.0-rc1"
+  - ELIXIR="v1.0.0-rc2"
+  - ELIXIR="v1.0.0"
 otp_release:
   - 17.0
+  - 17.1
+install: mix deps.get
 before_install:
-  - git clone https://github.com/elixir-lang/elixir
-  - cd elixir && make && cd ..
-before_script: "export PATH=`pwd`/elixir/bin:$PATH"
-script: "MIX_ENV=test mix do deps.get, test"
+  - mkdir -p vendor/elixir
+  - wget -q https://github.com/elixir-lang/elixir/releases/download/$ELIXIR/Precompiled.zip && unzip -qq Precompiled.zip -d vendor/elixir
+  - export PATH="$PATH:$PWD/vendor/elixir/bin"
+  - export MIX_ENV=test
+  - mix local.hex --force
+script: mix test --no-start
